--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ ul {
 }
 
 li {
-  padding: 5px 0;
+  padding: 0px 0;
 }
 
 h3 {
@@ -138,9 +138,13 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
+.btn {
+background: #7f8c8d;
+
+}
 
 button[type="button"] {
-  background: #7f8c8d;
+  background: #3498db;
 }
 
 button:hover {
@@ -187,4 +191,26 @@ button:hover {
 
 .rich-content b, .rich-content strong {
   font-weight: bold;
+}
+.details{
+
+  padding-top: 10px;
+}
+.message {
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.message.success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+.message.error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
 }
